REFACTORING: minor code refactoring